Michael Scott scroll text

--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/prison.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Michael Scott</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="scroll-please">
+      <img src="./public/michael-dont-ever.png" />
+      <h1>Scroll Please</h1>
+    </div>
+    <div class="scroll-reveal">
+      <h2><span>Michael Scott</span></h2>
+      <p>
+        <span
+          >Don't ever, for any reason, do anything, to anyone, for any reason,
+          ever, no matter what, no matter where, or who, or who you are with, or
+          where you are going, or where you've been, ever, for any reason
+          whatsoever.</span
+        >
+      </p>
+    </div>
+    <div class="shook">
+      <h3>Incredible text animation ain't it</h1>
+      <img src="./public/michael-shook.png" />
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
